# alphaAgent

./: .gitignore  README.md
factorHub/: .dockerignore  .gitignore  README_ZH.md  pyproject.toml  start_all.py  start_api.py
factorHub/.claude/: settings.json  settings.local.json
factorHub/.github/workflows/: docker.yml
factorHub/backend/api/: __init__.py  main.py
factorHub/backend/core/: database.py  settings.py
factorHub/backend/models/: backtest.py  cache_metadata.py  factor.py  factor_version.py  generated_factor.py
factorHub/backend/repositories/: backtest_repository.py  cache_repository.py  factor_repository.py  factor_version_repository.py
factorHub/backend/services/: backtest_service.py  cache_service.py  comprehensive_scoring_service.py  data_preprocessing_service.py  data_service.py  enhanced_analysis_service.py  export_service.py  factor_attribution_service.py  factor_effectiveness_service.py  factor_exposure_service.py  factor_import_service.py  factor_neutralization_service.py  factor_stability_service.py  factor_summary_service.py  factor_validation_service.py  factor_version_service.py  formula_compiler_service.py  portfolio_analysis_service.py  position_analysis_service.py  statistics_service.py  strategy_comparison_service.py  strategy_registry.py  vectorbt_backtest_service.py  visualization_service.py
factorHub/backend/strategies/: __init__.py  base_strategy.py  equal_weight_strategy.py  market_cap_strategy.py  mean_reversion_strategy.py  momentum_strategy.py
factorHub/docker/: Dockerfile  README.md  docker-compose.yml
(+23 files in other folders)
