[project]
name = "factor-flow"
version = "0.1.0"
description = "因子分析平台 - 基于Web前端的量化因子分析系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "TA-Lib>=0.4.28",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "xgboost>=2.0.0",
    "plotly>=5.18.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0.0",
    "vectorbt>=0.25.0",
    "DEAP>=1.3.0", # 遗传算法库
    "statsmodels>=0.14.0", # 统计分析
    "shap>=0.42.0", # SHAP模型解释库
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
